--- a/src/components/table/table.css
+++ b/src/components/table/table.css
@@ -185,6 +185,7 @@
   border-spacing: 0;
   border-top: 1px solid #e0e0e0;
   border-bottom: 1px solid #e0e0e0;
+  width: 100%;
 }
 
 .th:last-child {
