--- a/src/components/table/table.css
+++ b/src/components/table/table.css
@@ -18,8 +18,6 @@
 
 .svg-icon svg {
   position: relative;
-  height: 1.5em;
-  width: 1.5em;
 }
 
 .svg-text svg {
@@ -156,7 +154,6 @@
   color: #9e9e9e;
   font-weight: 500;
   font-size: 0.875rem;
-  cursor: pointer;
 }
 
 .th:hover {
@@ -260,6 +257,7 @@
 
 .icon-margin {
   margin-right: 4px;
+  margin-bottom: 2.5px;
 }
 
 .font-weight-600 {
