--- a/src/components/table/table.css
+++ b/src/components/table/table.css
@@ -174,7 +174,8 @@
   align-items: stretch;
   padding: 0;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  position: relative;
 }
 
 .td-content {
@@ -256,8 +257,8 @@
 }
 
 .icon-margin {
-  margin-right: 4px;
-  margin-bottom: 2.5px;
+  margin-right: 3px;
+  margin-bottom: 1px;
 }
 
 .font-weight-600 {
@@ -270,4 +271,9 @@
 
 .flex-1 {
   flex: 1;
+}
+
+.row-option.delete {
+  display: flex;
+  align-items: center;
 }
