--- a/src/assets/css/fonts.css
+++ b/src/assets/css/fonts.css
@@ -1,1 +1,1 @@
-@import url("https://fonts.googleapis.com/css2?family=Space+Mono:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;600;700&display=swap");
