--- a/src/assets/css/table.css
+++ b/src/assets/css/table.css
@@ -16,8 +16,10 @@
   transition: opacity 300ms;
 }
 
-.svg-icon svg {
+.svg-icon {
   position: relative;
+  display: flex;
+  align-items: center;
 }
 
 .svg-text svg {
