--- a/src/assets/css/table.css
+++ b/src/assets/css/table.css
@@ -141,13 +141,14 @@
   border-bottom: 0;
 }
 
-.add-row {
+.actions-btn {
   color: #9e9e9e;
   padding: 0.5rem;
   display: flex;
   align-items: center;
   font-size: 0.875rem;
   cursor: pointer;
+  margin: 0 5px;
 }
 
 .add-row:hover {
